--- a/estilos.css
+++ b/estilos.css
@@ -147,3 +147,132 @@
     flex-direction: column;
     justify-content: center;
 }
+/* Estilo general */
+body {
+  background-color: #727679; /
+  font-family: 'Orbitron', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #434343;
+  margin: 0;
+  padding: 0;
+}
+
+/* Encabezado */
+header {
+  background: linear-gradient(90deg, #2c2c2c, #2c2c2c);
+  padding: 20px;
+  text-align: center;
+  border-bottom: 2px solid #00ffc3;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 2.5em;
+  color: #00ffc3;
+  letter-spacing: 2px;
+}
+
+header nav a {
+  color: #00ffc3;
+  margin-left: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1em;
+}
+
+header nav a:hover {
+  color: #505050;
+}
+
+/* Secciones principales */
+main {
+  padding: 30px;
+}
+
+section {
+  background: #ffffff;
+  margin-bottom: 30px;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px rgba(0, 212, 255, 0.3);
+}
+
+/* Formularios */
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form input, form select {
+  width: 90%;
+  padding: 12px;
+  margin: 10px 0;
+  background: #909090;
+  border: 1px solid #00ffc3;
+  color: #ffffff;
+  border-radius: 8px;
+}
+
+form input::placeholder {
+  color: #aaaaaa;
+}
+
+button.login-btn {
+  background-color: #00ffc3;
+  color: #000000;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+button.login-btn:hover {
+  background-color: #00ffc3;
+}
+
+/* Tabla de equipos */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+th, td {
+  padding: 15px;
+  text-align: center;
+  border-bottom: 1px solid #2c2c2c;
+}
+
+th {
+  background: #00ffc3;
+  color: #000;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+td {
+  background: #1a1a1a;
+  color: #e0e0e0;
+}
+
+tr:hover {
+  background-color: #333;
+}
+
+/* Botones de acciones en tabla */
+table button {
+  background-color: #00ffc3;
+  color: #000;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 2px;
+}
+
+table button:hover {
+  background-color: #00ffc3;
+}
+
